--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,11 @@ dependencies {
     //HikariCP
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.0'
+
+    //log4j2
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.2'
 }
 
 test {
